<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Regis"
        android:layout_margin="40dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="@string/username"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/editNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:inputType="text"
        android:autofillHints="@string/Name"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/editpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="@string/password"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/editCpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/CPass"
        android:inputType="textPassword"
        android:autofillHints="@string/CPass"
        android:textSize="15sp" />

    <Button
        android:id="@+id/regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:onClick="Register"
        android:textSize="13pt"/>


</LinearLayout>