<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginUser"
            android:layout_margin="40dp"
            android:layout_marginRight="50dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="15pt"/>

        <EditText
            android:id="@+id/editTextusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="@string/username"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextpassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:textSize="15sp" />


    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"
        android:textSize="13pt"/>


</LinearLayout>